Fix weird jumping scroll bar issue in footer

--- a/css/components/_footer.scss
+++ b/css/components/_footer.scss
@@ -1,8 +1,9 @@
 footer {
+    // margin-top: auto;
+    // min-height: calc(100vh - (60px + 54.5vw));  // note: Sass doesn't appear to support calc with variables (had to hard-code header height)
     border-top: 1px solid $copyright-border-top-color;
     color: $footer-color;
     background: $footer-bg-color;
-    min-height: calc(100vh - (60px + 54.5vw));  // note: Sass doesn't appear to support calc with variables (had to hard-code header height)
     display: flex;
     flex-direction: column;
     .container {
